Website Layout/Design no functionalities yet

--- a/index.html
+++ b/index.html
@@ -1,8 +1,23 @@
 <html>
 <head>
+<link rel="stylesheet" href="styles/styles.css">
 <title> Andrea Balcom </title>
 </head>
-<body>
-<h1> Eyyy Hello! </h1>
+
+<body background="images/beef.jpg">
+
+<div>
+<h1> Hi! I'm Andrea</h1>
+<p>I am currently studying Bachelor of Science in Information Technology in University of Southeastern Philippines.</p>
+
+
+</div>
+  <figure><img src ="images/Ako.jpg" alt="Andre Balcom" width="263px" height="293px"></figure>
+	<ul>
+	<li>Basic Info</li>
+	<li>Skills</li>
+	<li>Contacts</li>
+	<li>Home</li>
+	<ul>
+	
 </body>
-</html>
