Redesigned the layout, partially functioning buttons, and new empty html page

--- a/index.html
+++ b/index.html
@@ -9,15 +9,12 @@
 <div>
 <h1> Hi! I'm Andrea</h1>
 <p>I am currently studying Bachelor of Science in Information Technology in University of Southeastern Philippines.</p>
-
-
 </div>
-  <figure><img src ="images/Ako.jpg" alt="Andre Balcom" width="263px" height="293px"></figure>
-	<ul>
-	<li>Basic Info</li>
-	<li>Skills</li>
-	<li>Contacts</li>
-	<li>Home</li>
-	<ul>
+  <figure><a href=""><img src ="images/Ako.jpg" alt="Andre Balcom" width="355px" height="489px"></a></figure>
+
+	<a href="index.html" class="button">Home</a>
+	<a href="info.html" class="button1">About Me</a>
+	<a href="" class="button1">Skills</a>
+	<a href="" class="button1">Contact</a>
 	
 </body>
