--- a/info.html
+++ b/info.html
@@ -1,8 +1,12 @@
 <html>
 <head>
+<link rel="stylesheet" href="styles/styles1.css">
 <title> Andrea Balcom - Basic Info </title>
 </head>
-<body>
-Surprise! There's not much yet!
+<body background="imgaes/beef.jpg">
+<div>
+	<p>
+	Name: Andrea Gail N. Balcom
+	</p>
 </body>
 </html>
