info.html layout, modified styles1.css

--- a/info.html
+++ b/info.html
@@ -4,9 +4,20 @@
 <title> Andrea Balcom - Basic Info </title>
 </head>
 <body background="imgaes/beef.jpg">
+<p class="head">
+About Me
+<p>
+<figure><a href=""><img src ="images/Ako.jpg" alt="Andre Balcom" width="240px" height="300px"></a></figure>
 <div>
+<div class="inner">
 	<p>
-	Name: Andrea Gail N. Balcom
+	Andrea Gail N. Balcom
 	</p>
+</div>
+</div>
+	<a href="index.html" class="button">Home</a>
+	<a href="info.html" class="button1">About Me</a>
+	<a href="" class="button2">Skills</a>
+	<a href="" class="button3">Contact</a>
 </body>
 </html>
