modified htmls: index and info and css': styles & styles1, addedskills.html

--- a/info.html
+++ b/info.html
@@ -3,7 +3,7 @@
 <link rel="stylesheet" href="styles/styles1.css">
 <title> Andrea Balcom - Basic Info </title>
 </head>
-<body background="imgaes/beef.jpg">
+<body>
 <p class="head">
 About Me
 <p>
