added pictures for education

--- a/info.html
+++ b/info.html
@@ -14,6 +14,11 @@ About Me
 	Andrea Gail N. Balcom
 	</p>
 </div>
+<!-- <div class="inner1">
+	<p>
+	Educational Attainment
+	</p>
+</div> -->
 </div>
 	<a href="index.html" class="button">Home</a>
 	<a href="info.html" class="button1">About Me</a>
