modified info.html, education.html, styles1.css, added new photos

--- a/info.html
+++ b/info.html
@@ -7,18 +7,16 @@
 <p class="head">
 About Me
 <p>
-<figure><a href=""><img src ="images/Ako.jpg" alt="Andre Balcom" width="240px" height="300px"></a></figure>
+<figure><a href=""><img src ="images/Ako.jpg" alt="Andrea Balcom" width="240px" height="300px"></a></figure>
 <div>
 <div class="inner">
 	<p>
 	Andrea Gail N. Balcom
 	</p>
 </div>
-<!-- <div class="inner1">
-	<p>
-	Educational Attainment
-	</p>
-</div> -->
+<figure class="arrow">
+<a href="infos/education.html"><img src="images/arrow.png" width="100px" height="100px"></a>
+</figure>
 </div>
 	<a href="index.html" class="button">Home</a>
 	<a href="info.html" class="button1">About Me</a>
