--- a/infos/education.html
+++ b/infos/education.html
@@ -1,13 +1,13 @@
 <html>
 <head>
-<link rel="stylesheet" href="styles/styles1.css">
+<link rel="stylesheet" href="../styles/styles1.css">
 <title> Andrea Balcom - Skills </title>
 </head>
 <body>
 <p class="head">
 About Me
 <p>
-<figure><a href=""><img src ="images/Ako.jpg" alt="Andre Balcom" width="240px" height="300px"></a></figure>
+<figure><a href=""><img src ="../images/Ako.jpg" alt="Andrea Balcom" width="240px" height="300px"></a></figure>
 <div>
 <div class="inner">
 	<p>
@@ -15,8 +15,11 @@ About Me
 	</p>
 </div>
 </div>
-<a href="index.html" class="button">Home</a>
-	<a href="info.html" class="button1">About Me</a>
+<figure class="arrow1">
+<a href="../info.html"><img src="../images/arrow1.png" width="100px" height="100px"></a>
+</figure>
+<a href="../index.html" class="button">Home</a>
+	<a href="../info.html" class="button1">About Me</a>
 	<a href="" class="button2">Skills</a>
 	<a href="" class="button3">Contact</a>
 </body>
