modified index,info,education.html and styles1.css added website icon

--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <head>
 <link rel="stylesheet" href="styles/styles.css">
 <title> Andrea Balcom </title>
+<link rel="icon" href="images/header.png">
 </head>
 
 <body>
