--- a/info.html
+++ b/info.html
@@ -2,21 +2,22 @@
 <head>
 <link rel="stylesheet" href="styles/styles1.css">
 <title> Andrea Balcom - Basic Info </title>
+<link rel="icon" href="images/header.png">
 </head>
 <body>
 <p class="head">
 About Me
 <p>
-<figure><a href=""><img src ="images/Ako.jpg" alt="Andrea Balcom" width="240px" height="300px"></a></figure>
+<figure class="image"><a href=""><img src ="images/Ako.jpg" alt="Andrea Balcom" width="240px" height="300px"></a></figure>
 <div>
 <div class="inner">
 	<p>
 	Andrea Gail N. Balcom
 	</p>
 </div>
-<figure class="arrow">
+<figure class="arrow"><acronym title="forth">
 <a href="infos/education.html"><img src="images/arrow.png" width="100px" height="100px"></a>
-</figure>
+</acronym></figure>
 </div>
 	<a href="index.html" class="button">Home</a>
 	<a href="info.html" class="button1">About Me</a>
