--- a/infos/education.html
+++ b/infos/education.html
@@ -2,23 +2,31 @@
 <head>
 <link rel="stylesheet" href="../styles/styles1.css">
 <title> Andrea Balcom - Skills </title>
+<link rel="icon" href="images/header.png">
 </head>
 <body>
 <p class="head">
 About Me
 <p>
-<figure><a href=""><img src ="../images/Ako.jpg" alt="Andrea Balcom" width="240px" height="300px"></a></figure>
+<figure class="image">
+<a href=""><img src ="../images/Ako.jpg" alt="Andrea Balcom" width="240px" height="300px"></a></figure>
 <div>
 <div class="inner">
 	<p>
-	Education Attainment
+	Educational Attainment
+	<img src ="../images/elem.gif" alt="SRCES" width="120px" height="100px">
+	<img src ="../images/hs.png" alt="SRCES" width="120px" height="100px">
+	<img src ="../images/col.png" alt="SRCES" width="120px" height="100px">
 	</p>
 </div>
-</div>
-<figure class="arrow1">
+<figure class="arrow1"><acronym title="back">
 <a href="../info.html"><img src="../images/arrow1.png" width="100px" height="100px"></a>
-</figure>
-<a href="../index.html" class="button">Home</a>
+</acronym></figure>
+</div>
+
+
+
+	<a href="../index.html" class="button">Home</a>
 	<a href="../info.html" class="button1">About Me</a>
 	<a href="" class="button2">Skills</a>
 	<a href="" class="button3">Contact</a>
