modified education.html and added style_educ.css

--- a/infos/education.html
+++ b/infos/education.html
@@ -1,6 +1,7 @@
 <html>
 <head>
 <link rel="stylesheet" href="../styles/styles1.css">
+<link rel="stylesheet" href="../styles/style_educ.css">
 <title> Andrea Balcom - Skills </title>
 <link rel="icon" href="images/header.png">
 </head>
@@ -14,14 +15,18 @@ About Me
 <div class="inner">
 	<p>
 	Educational Attainment
+<figure class="educ">	
 	<img src ="../images/elem.gif" alt="SRCES" width="120px" height="100px">
 	<img src ="../images/hs.png" alt="SRCES" width="120px" height="100px">
 	<img src ="../images/col.png" alt="SRCES" width="120px" height="100px">
-	</p>
+</figure>
+</p>
 </div>
-<figure class="arrow1"><acronym title="back">
-<a href="../info.html"><img src="../images/arrow1.png" width="100px" height="100px"></a>
-</acronym></figure>
+<figure class="arrow1">
+	<acronym title="back">
+		<a href="../info.html"><img src="../images/arrow1.png" width="100px" height="100px"></a>
+	</acronym>
+</figure>
 </div>
 
 
