--- a/infos/education.html
+++ b/infos/education.html
@@ -3,7 +3,7 @@
 <link rel="stylesheet" href="../styles/styles1.css">
 <link rel="stylesheet" href="../styles/style_educ.css">
 <title> Andrea Balcom - Skills </title>
-<link rel="icon" href="images/header.png">
+<link rel="icon" href="../images/header.png">
 </head>
 <body>
 <p class="head">
@@ -13,14 +13,19 @@ About Me
 <a href=""><img src ="../images/Ako.jpg" alt="Andrea Balcom" width="240px" height="300px"></a></figure>
 <div>
 <div class="inner">
-	<p>
+	<p class="mod">
 	Educational Attainment
+	</p>
 <figure class="educ">	
 	<img src ="../images/elem.gif" alt="SRCES" width="120px" height="100px">
+</figure>
+<figure class="educ1">
 	<img src ="../images/hs.png" alt="SRCES" width="100px" height="100px">
+</figure>
+<figure class="educ2">
 	<img src ="../images/col.png" alt="SRCES" width="100px" height="100px">
 </figure>
-</p>
+
 </div>
 <figure class="arrow1">
 	<acronym title="back">
