added content for about me page and modifications

--- a/info.html
+++ b/info.html
@@ -12,7 +12,17 @@ About Me
 <div>
 <div class="inner">
 	<p>
-	Andrea Gail N. Balcom
+	Name: <span style="padding-left: 88px;">Andrea Gail N. Balcom</span><br>
+	N-name: <span style="padding-left: 128px;">Nicole/Kong</span><br>
+	Address: <br> <span style="padding-left: 100px;">26 Everlasting Rd. NCCC Village Bajada, Davao City</span><br><br>
+	Date of Birth: <span style="padding-left: 88px;">10/03/98</span><br>
+	Place of Birth: <span style="padding-left: 88px;">Davao City</span><br>
+	Gender: <span style="padding-left: 158px;">F</span><br>
+	Age: <span style="padding-left: 198px;">18</span><br>
+	Height: <span style="padding-left: 158px;">5"1</span><br>
+	Weight: <span style="padding-left: 152px;">45 kg</span><br>
+	Civil Status: <span style="padding-left: 112px;">Single</span><br>
+	Citizenship: <span style="padding-left: 108px;">Filipino</span><br>
 	</p>
 </div>
 <figure class="arrow"><acronym title="forth">
