--- a/infos/education.html
+++ b/infos/education.html
@@ -17,13 +17,13 @@ About Me
 	Educational Attainment
 	</p>
 <figure class="educ">	
-	<img src ="../images/elem.gif" alt="SRCES" width="120px" height="100px">
+	<img src ="../images/elem.gif" alt="SRCES" width="120px" height="100px" title="SRCES">
 </figure>
 <figure class="educ1">
-	<img src ="../images/hs.png" alt="SRCES" width="100px" height="100px">
+	<img src ="../images/hs.png" alt="SRCES" width="100px" height="100px" title="DCNHS">
 </figure>
 <figure class="educ2">
-	<img src ="../images/col.png" alt="SRCES" width="100px" height="100px">
+	<img src ="../images/col.png" alt="SRCES" width="100px" height="100px" title="USEP">
 </figure>
 
 </div>
@@ -33,9 +33,6 @@ About Me
 	</acronym>
 </figure>
 </div>
-
-
-
 	<a href="../index.html" class="button">Home</a>
 	<a href="../info.html" class="button1">About Me</a>
 	<a href="" class="button2">Skills</a>
