--- a/index.html
+++ b/index.html
@@ -11,7 +11,10 @@
 <h1> Hi! I'm Andrea</h1>
 <p>I am currently studying Bachelor of Science in Information Technology in University of Southeastern Philippines.</p>
 </div>
-  <figure><a href=""><img src ="images/Ako.jpg" alt="Andre Balcom" width="355px" height="489px"></a></figure>
+  <figure><a href="">
+  <img src ="images/Ako.jpg" alt="Andre Balcom" width="355px" height="489px">
+</a>
+  </figure>
 
 	<a href="index.html" class="button">Home</a>
 	<a href="info.html" class="button1">About Me</a>
