added content on education.html and modifications to style_educ.css

--- a/infos/education.html
+++ b/infos/education.html
@@ -18,12 +18,24 @@ About Me
 	</p>
 <figure class="educ">	
 	<img src ="../images/elem.gif" alt="SRCES" width="120px" height="100px" title="SRCES">
+	<p class="description"> San Roque Central Elementary School<br> 
+		Lacson Street Obrero, Davao City<br>
+		2007-2010
+	</p>
 </figure>
 <figure class="educ1">
-	<img src ="../images/hs.png" alt="SRCES" width="100px" height="100px" title="DCNHS">
+	<img src ="../images/hs.png" alt="DCNHS" width="100px" height="100px" title="DCNHS">
+	<p class="description"> Davao City National High School<br> 
+		F. Torres Street, Davao City<br>
+		2010-2014
+	</p>
 </figure>
 <figure class="educ2">
-	<img src ="../images/col.png" alt="SRCES" width="100px" height="100px" title="USEP">
+	<img src ="../images/col.png" alt="USEP" width="100px" height="100px" title="USEP">
+	<p class="description"> University of Southeastern Philippines<br> 
+		263 Iñigo Street, Obrero, Davao City<br>
+		2014-Present
+	</p>
 </figure>
 
 </div>
