--- a/index.html
+++ b/index.html
@@ -19,6 +19,6 @@
 	<a href="index.html" class="button">Home</a>
 	<a href="info.html" class="button1">About Me</a>
 	<a href="" class="button1">Skills</a>
-	<a href="" class="button1">Contact</a>
+	<a href="contact.html" class="button1">Contact</a>
 	
 </body>
