--- a/info.html
+++ b/info.html
@@ -15,6 +15,7 @@ About Me
 	Name: <span style="padding-left: 88px;">Andrea Gail N. Balcom</span><br>
 	N-name: <span style="padding-left: 128px;">Nicole/Kong</span><br>
 	Address: <br> <span style="padding-left: 100px;">26 Everlasting Rd. NCCC Village Bajada, Davao City</span><br><br>
+	
 	Date of Birth: <span style="padding-left: 88px;">10/03/98</span><br>
 	Place of Birth: <span style="padding-left: 88px;">Davao City</span><br>
 	Gender: <span style="padding-left: 158px;">F</span><br>
@@ -32,6 +33,6 @@ About Me
 	<a href="index.html" class="button">Home</a>
 	<a href="info.html" class="button1">About Me</a>
 	<a href="" class="button2">Skills</a>
-	<a href="" class="button3">Contact</a>
+	<a href="contact.html" class="button3">Contact</a>
 </body>
 </html>
