--- a/contact.html
+++ b/contact.html
@@ -1,8 +1,27 @@
 <html>
 <head>
+<link rel="stylesheet" href="styles/styles1.css">
+<link rel="stylesheet" href="styles/style_contact.css">
 <title> Andrea Balcom - Contact </title>
+<link rel="icon" href="images/header.png">
 </head>
 <body>
-<p>NOT YET!<p>
+<p class="contact_title">
+Reach me here: 
+<p>
+<figure class="image"><a href=""><img src ="images/Ako.jpg" alt="Andrea Balcom" width="240px" height="300px"></a></figure>
+<div>
+<div class="inner">
+	<p>
+	
+	</p>
+</div>
+</div>
+</p>
+	<a href="index.html" class="button">Home</a>
+	<a href="info.html" class="button1">About Me</a>
+	<a href="" class="button2">Skills</a>
+	<a href="contact.html" class="button3">Contact</a>
+</p>
 </body>
 </html>
