modifications on contact.html and other 2 css

--- a/contact.html
+++ b/contact.html
@@ -12,9 +12,18 @@ Reach me here:
 <figure class="image"><a href=""><img src ="images/Ako.jpg" alt="Andrea Balcom" width="240px" height="300px"></a></figure>
 <div>
 <div class="inner">
-	<p>
-	
-	</p>
+	<figure class="mobile">	
+		<img src ="images/mobile.png" alt="mobile" width="150px" height="150px" title="Cellphone #">	
+		<p class="description_2"> MOBILE NUMBER<br> 
+			09122172009<br>
+		</p>
+	</figure>
+	<figure class="mail">	
+		<img src ="images/mail.png" alt="mail" width="150px" height="150px" title="Gmail">
+		<p class="description_2">E-mail Adrress<br> 
+			nicolebalcom3@gmail.com<br>
+		</p>
+	</figure>
 </div>
 </div>
 </p>
