modifications and added minor changes on skills.html

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 
 	<a href="index.html" class="button">Home</a>
 	<a href="info.html" class="button1">About Me</a>
-	<a href="" class="button1">Skills</a>
+	<a href="skills.html" class="button1">Skills</a>
 	<a href="contact.html" class="button1">Contact</a>
 	
 </body>
