--- a/infos/education.html
+++ b/infos/education.html
@@ -48,6 +48,6 @@ About Me
 	<a href="../index.html" class="button">Home</a>
 	<a href="../info.html" class="button1">About Me</a>
 	<a href="" class="button2">Skills</a>
-	<a href="" class="button3">Contact</a>
+	<a href="../contact.html" class="button3">Contact</a>
 </body>
 </html>
