--- a/skills.html
+++ b/skills.html
@@ -3,5 +3,19 @@
 <title> Andrea Balcom - Skills </title>
 </head>
 <body>
+<p class="contact_title">
+I can do these: 
+<p>
+<figure class="image"><a href=""><img src ="images/Ako.jpg" alt="Andrea Balcom" width="240px" height="300px"></a></figure>
+<div>
+<div class="inner">
+</div>
+</div>
+</p>
+	<a href="index.html" class="button">Home</a>
+	<a href="info.html" class="button1">About Me</a>
+	<a href="" class="button2">Skills</a>
+	<a href="contact.html" class="button3">Contact</a>
+</p>
 </body>
 </html>
