added new css: style_skills.css and some modifications

--- a/skills.html
+++ b/skills.html
@@ -1,14 +1,21 @@
 <html>
 <head>
+<link rel="stylesheet" href="styles/styles1.css">
+<link rel="stylesheet" href="styles/style_skills.css">
 <title> Andrea Balcom - Skills </title>
 </head>
 <body>
-<p class="contact_title">
+<p class="skills_title">
 I can do these: 
 <p>
 <figure class="image"><a href=""><img src ="images/Ako.jpg" alt="Andrea Balcom" width="240px" height="300px"></a></figure>
 <div>
 <div class="inner">
+<figure class="arrow3">
+	<acronym title="forth">
+		<a href=""><img src="images/arrow.png" width="100px" height="100px"></a>
+	</acronym>
+</figure>
 </div>
 </div>
 </p>
