--- a/info.html
+++ b/info.html
@@ -8,21 +8,21 @@
 <p class="head">
 About Me
 <p>
-<figure class="image"><a href=""><img src ="images/Ako.jpg" alt="Andrea Balcom" width="240px" height="300px"></a></figure>
+<figure class="image"><a href=""><img src ="images/Ako.jpg" alt="Andrea Balcom" width="240px" height="320px"></a></figure>
 <div>
 <div class="inner">
 	<p>
-	Name: <span style="padding-left: 88px;">Andrea Gail N. Balcom</span><br>
+	Name: <span style="padding-left: 28px;">Andrea Gail N. Balcom</span><br>
 	N-name: <span style="padding-left: 128px;">Nicole/Kong</span><br>
-	Address: <br> <span style="padding-left: 100px;">26 Everlasting Rd. NCCC Village Bajada, Davao City</span><br><br>
+	Address: <span style="padding-left: 77px;">26 Everlasting Rd. NCCC Village Bajada, Davao City</span><br><br>
 	
-	Date of Birth: <span style="padding-left: 88px;">10/03/98</span><br>
-	Place of Birth: <span style="padding-left: 88px;">Davao City</span><br>
+	Date of Birth: <span style="padding-left: 85px;">10/03/98</span><br>
+	Place of Birth: <span style="padding-left: 81px;">Davao City</span><br>
 	Gender: <span style="padding-left: 158px;">F</span><br>
-	Age: <span style="padding-left: 198px;">18</span><br>
-	Height: <span style="padding-left: 158px;">5"1</span><br>
-	Weight: <span style="padding-left: 152px;">47 kg</span><br>
-	Civil Status: <span style="padding-left: 112px;">Single</span><br>
+	Age: <span style="padding-left: 203px;">18</span><br>
+	Height: <span style="padding-left: 163px;">5"1</span><br>
+	Weight: <span style="padding-left: 155px;">47 kg</span><br>
+	Civil Status: <span style="padding-left: 105px;">Single</span><br>
 	Citizenship: <span style="padding-left: 108px;">Filipino</span><br>
 	</p>
 </div>
