added icons nd modifications on skills.html and style_skills.css

--- a/skills.html
+++ b/skills.html
@@ -3,6 +3,7 @@
 <link rel="stylesheet" href="styles/styles1.css">
 <link rel="stylesheet" href="styles/style_skills.css">
 <title> Andrea Balcom - Skills </title>
+<link rel="icon" href="images/header.png">
 </head>
 <body>
 <p class="skills_title">
@@ -11,12 +12,20 @@ I can do these:
 <figure class="image"><a href=""><img src ="images/Ako.jpg" alt="Andrea Balcom" width="240px" height="300px"></a></figure>
 <div>
 <div class="inner">
+<figure class="multi">
+<p class="multi_description">
+	Multimedia Skills
+</p>
+<img src ="images/multi.png" width="150px" height="150px" title="Multimedia">
+
+</figure>
+
+</div>
 <figure class="arrow3">
 	<acronym title="forth">
 		<a href=""><img src="images/arrow.png" width="100px" height="100px"></a>
 	</acronym>
 </figure>
-</div>
 </div>
 </p>
 	<a href="index.html" class="button">Home</a>
