added content for skills and small modifications

--- a/skills.html
+++ b/skills.html
@@ -19,6 +19,20 @@ I can do these:
 <img src ="images/multi.png" width="150px" height="150px" title="Multimedia">
 
 </figure>
+<figure>
+<p>
+Photoshop<br>
+<span style="padding-left: 50px;">Image Editing<br>
+<span style="padding-left: 50px;">Layouting<br>
+<span style="padding-left: 70px;">• Magazine<br>
+<span style="padding-left: 70px;">• Calling Card<br>
+<span style="padding-left: 70px;">• Tarpaulins<br>
+<span style="padding-left: 70px;">• etc.<br><br>
+Flash (Basic)<br>
+<span style="padding-left: 50px;">GIF making<br>
+
+</p>
+
 
 </div>
 <figure class="arrow3">
