dded new html file for skills and really tiny modifications

--- a/contact.html
+++ b/contact.html
@@ -29,7 +29,7 @@ Reach me here:
 </p>
 	<a href="index.html" class="button">Home</a>
 	<a href="info.html" class="button1">About Me</a>
-	<a href="" class="button2">Skills</a>
+	<a href="skills.html" class="button2">Skills</a>
 	<a href="contact.html" class="button3">Contact</a>
 </p>
 </body>
