--- a/info.html
+++ b/info.html
@@ -33,7 +33,7 @@ About Me
 </p>
 	<a href="index.html" class="button">Home</a>
 	<a href="info.html" class="button1">About Me</a>
-	<a href="" class="button2">Skills</a>
+	<a href="skills.html" class="button2">Skills</a>
 	<a href="contact.html" class="button3">Contact</a>
 </body>
 </html>
