--- a/infos/education.html
+++ b/infos/education.html
@@ -47,7 +47,7 @@ About Me
 </div>
 	<a href="../index.html" class="button">Home</a>
 	<a href="../info.html" class="button1">About Me</a>
-	<a href="" class="button2">Skills</a>
+	<a href="../skills.html" class="button2">Skills</a>
 	<a href="../contact.html" class="button3">Contact</a>
 </body>
 </html>
