renamed folder:info --> pages, modifications and added small content on skills2.html

--- a/info.html
+++ b/info.html
@@ -27,7 +27,7 @@ About Me
 	</p>
 </div>
 <figure class="arrow"><acronym title="forth">
-<a href="infos/education.html"><img src="images/arrow.png" width="100px" height="100px"></a>
+<a href="pages/education.html"><img src="images/arrow.png" width="100px" height="100px"></a>
 </acronym></figure>
 </div>
 </p>
