--- a/skills.html
+++ b/skills.html
@@ -37,7 +37,7 @@ Flash (Basic)<br>
 </div>
 <figure class="arrow3">
 	<acronym title="forth">
-		<a href=""><img src="images/arrow.png" width="100px" height="100px"></a>
+		<a href="pages/skills2.html"><img src="images/arrow.png" width="100px" height="100px"></a>
 	</acronym>
 </figure>
 </div>
