--- a/pages/skills2.html
+++ b/pages/skills2.html
@@ -2,8 +2,9 @@
 <head>
 <link rel="stylesheet" href="../styles/styles1.css">
 <link rel="stylesheet" href="../styles/style_skills.css">
+<link rel="stylesheet" href="../styles/style_skills2.css">
 <title> Andrea Balcom - Skills </title>
-<link rel="icon" href="images/header.png">
+<link rel="icon" href="../images/header.png">
 </head>
 <body>
 <p class="skills_title">
@@ -11,8 +12,8 @@ I can do these:
 <p>
 <div>
 <div class="inner">
-<figure class="multi">
-<p class="multi_description">
+<figure class="prog">
+<p class="prog_description">
 	Programming Skills
 </p>
 <img src ="../images/prog.png" width="150px" height="150px" title="Programming">
