modifications: contact.html, skills.html, skills2.html, and style_skills2.css

--- a/pages/skills2.html
+++ b/pages/skills2.html
@@ -10,6 +10,7 @@
 <p class="skills_title">
 I can do these: 
 <p>
+<figure class="image"><a href=""><img src ="../images/Ako.jpg" alt="Andrea Balcom" width="240px" height="320px"></a></figure>
 <div>
 <div class="inner">
 <figure class="prog">
@@ -17,20 +18,24 @@ I can do these:
 	Programming Skills
 </p>
 <img src ="../images/prog.png" width="150px" height="150px" title="Programming">
-
 </figure>
 <figure>
-<p>
-
+<p class="prog_content">
+<span style="padding-left: 50px;">C++ (Basic)<br>
+<span style="padding-left: 50px;">Java<br>
+<span style="padding-left: 50px;">HTML, CSS<br>
 </p>
-
-
 </div>
-<figure class="arrow3">
-	<acronym title="forth">
-		<a href=""><img src="../images/arrow.png" width="100px" height="100px"></a>
+<figure class="arrow1">
+	<acronym title="back">
+		<a href="../skills.html"><img src="../images/arrow1.png" width="100px" height="100px"></a>
 	</acronym>
 </figure>
 </div>
+</p>
+	<a href="../index.html" class="button">Home</a>
+	<a href="../info.html" class="button1">About Me</a>
+	<a href="../skills.html" class="button2">Skills</a>
+	<a href="../contact.html" class="button3">Contact</a>
 </body>
 </html>
