--- a/skills.html
+++ b/skills.html
@@ -9,7 +9,7 @@
 <p class="skills_title">
 I can do these: 
 <p>
-<figure class="image"><a href=""><img src ="images/Ako.jpg" alt="Andrea Balcom" width="240px" height="300px"></a></figure>
+<figure class="image"><a href=""><img src ="images/Ako.jpg" alt="Andrea Balcom" width="240px" height="320px"></a></figure>
 <div>
 <div class="inner">
 <figure class="multi">
@@ -44,7 +44,7 @@ Flash (Basic)<br>
 </p>
 	<a href="index.html" class="button">Home</a>
 	<a href="info.html" class="button1">About Me</a>
-	<a href="" class="button2">Skills</a>
+	<a href="skills.html" class="button2">Skills</a>
 	<a href="contact.html" class="button3">Contact</a>
 </p>
 </body>
