added new photo and new css file: redirect.css and tiny modification

--- a/index.html
+++ b/index.html
@@ -11,8 +11,9 @@
 <h1> Hi! I'm Andrea</h1>
 <p>I am currently studying Bachelor of Science in Information Technology in University of Southeastern Philippines.</p>
 </div>
-  <figure><a href="">
-  <img src ="images/Ako.jpg" alt="Andre Balcom" width="355px" height="489px">
+  <figure class="container"><a href="">
+  <img src ="images/Ako.jpg" alt="Andre Balcom" width="355px" height="489px" class="image">
+
 </a>
   </figure>
 
