Modification: the layout is all over the place not fixed yet

--- a/index.html
+++ b/index.html
@@ -1,25 +1,29 @@
 <html>
 <head>
 <link rel="stylesheet" href="styles/styles.css">
+<link rel="stylesheet" href="styles/redirect.css">
 <title> Andrea Balcom </title>
 <link rel="icon" href="images/header.png">
 </head>
 
 <body>
 
-<div>
+<div class="description">
 <h1> Hi! I'm Andrea</h1>
 <p>I am currently studying Bachelor of Science in Information Technology in University of Southeastern Philippines.</p>
 </div>
-  <figure class="container"><a href="">
-  <img src ="images/Ako.jpg" alt="Andre Balcom" width="355px" height="489px" class="image">
-
-</a>
-  </figure>
-
+<figure>
+ <div class="container"><a href="bruh.html">
+  <img src="images/Ako.jpg" width="355px" height="489px" alt="Avatar" class="image">
+  <div class="overlay">
+    <div><img src="images/ungo.png"width="440px" height="460px" </div>
+  </div></a>
+</div>
+</figure>
 	<a href="index.html" class="button">Home</a>
 	<a href="info.html" class="button1">About Me</a>
 	<a href="skills.html" class="button1">Skills</a>
 	<a href="contact.html" class="button1">Contact</a>
 	
 </body>
+</html>
