added new html file:me.html and modifications again

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <p>I am currently studying Bachelor of Science in Information Technology in University of Southeastern Philippines.</p>
 </div>
 <figure>
- <div class="container"><a href="bruh.html">
+ <div class="container"><a href="me/me.html">
   <img src="images/Ako.jpg" width="355px" height="489px" alt="Avatar" class="image">
   <div class="overlay">
     <div><img src="images/ungo.png"width="440px" height="460px" </div>
