--- a/me/me.html
+++ b/me/me.html
@@ -1,7 +1,7 @@
 <html>
 <head>
 <title> Hello! </title>
-<link rel="icon" href="images/header.png">
+<link rel="icon" href="../images/header2.png">
 </head>
 
 <body>
