--- a/me/me.html
+++ b/me/me.html
@@ -1,10 +1,13 @@
 <html>
 <head>
 <title> Hello! </title>
-<link rel="icon" href="../images/header2.png">
+<link rel="stylesheet" href="my_styles/me.css">
+<link rel="icon" href="my_images/header2.png">
 </head>
 
 <body>
-The Me is not yet here	
+<div class="description">
+The Me is not yet here
+</div>	
 </body>
 </html>
