added banner image for me.html and modifications for its layout

--- a/me/me.html
+++ b/me/me.html
@@ -6,8 +6,15 @@
 </head>
 
 <body>
+<figure>
+<img src="my_images/banner.jpg">
+</figure>
+<div class="holder">
 <div class="description">
-The Me is not yet here
+<p>
+Hewoooo, I'm hereeeee!
+</p>
+</div>
 </div>	
 </body>
 </html>
