added images for button(not yet fixed) and modifications

--- a/me/me.html
+++ b/me/me.html
@@ -16,5 +16,17 @@ Hewoooo, I'm hereeeee!
 </p>
 </div>
 </div>	
+<figure class="paw">
+<div class="container"><a href="">
+<acronym title="forth">
+<a href=""><img src="my_images/forth1.png" width="100px" height="100px" class="image"></a>
+</acronym>
+<div class="overlay">
+<div>
+<img src="my_images/forth.png">
+</div>
+</div>
+</div>
+</figure>
 </body>
 </html>
