--- a/me/me.html
+++ b/me/me.html
@@ -17,15 +17,16 @@ Hewoooo, I'm hereeeee!
 </div>
 </div>	
 <figure class="paw">
-<div class="container"><a href="">
-<acronym title="forth">
-<a href=""><img src="my_images/forth1.png" width="100px" height="100px" class="image"></a>
-</acronym>
-<div class="overlay">
-<div>
-<img src="my_images/forth.png">
-</div>
-</div>
+<div class="container">
+	<acronym title="forth">
+		<a href="bruh.html">
+			<img src="my_images/forth1.png" width="100px" height="100px"  class="image" title="forth">
+				<div class="overlay">
+							<div>
+								<img src="my_images/forth.png" width="450px" height="120px">
+							</div>
+				</div></a>
+	</acronym>
 </div>
 </figure>
 </body>
