home button fixed for me.html, modifications

--- a/me/me.html
+++ b/me/me.html
@@ -9,6 +9,7 @@
 <figure>
 <img src="my_images/banner.jpg">
 </figure>
+
 <div class="holder">
 <div class="description">
 <p>
@@ -28,6 +29,10 @@ Hewoooo, I'm hereeeee!
 				</div></a>
 	</acronym>
 </div>
+</figure>
+<figure class="home">
+<a href="../index.html">
+<img src="my_images/home.png" width="100px" height="100px"  class="image" title="back to homepage"></a>
 </figure>
 </body>
 </html>
