--- a/me/me.html
+++ b/me/me.html
@@ -13,9 +13,13 @@
 <div class="holder">
 <div class="description">
 <p>
-Hewoooo, I'm hereeeee!
+Hewoooo! So you probably know me by Andrea, but I go by Nicole most of the time. Believe me it has a reason but I'm not going to tell that now. Not Here. Though you can call me whatever you like as long as it's part of my name, of course! So yeah, nice to meet you (I guess)!
+</p>
+<p class="sub">
+Also, I do not in any way own the pictures here on my website they're stolen from the internet unless I said otherwise. These (pug)pictures are rightly owned by pugliepug.com, so please don't sue me. Thank you.
 </p>
 </div>
+
 </div>	
 <figure class="paw">
 <div class="container">
@@ -32,7 +36,7 @@ Hewoooo, I'm hereeeee!
 </figure>
 <figure class="home">
 <a href="../index.html">
-<img src="my_images/home.png" width="100px" height="100px"  class="image" title="back to homepage"></a>
+<img src="my_images/home.png" width="80px" height="80px" title="back to homepage"></a>
 </figure>
 </body>
 </html>
