added page 2 for me.html may or may not have a separate css style

--- a/me/me.html
+++ b/me/me.html
@@ -24,7 +24,7 @@ Also, I do not in any way own the pictures here on my website they're stolen fro
 <figure class="paw">
 <div class="container">
 	<acronym title="forth">
-		<a href="bruh.html">
+		<a href="my_pages/me2.html">
 			<img src="my_images/forth1.png" width="100px" height="100px"  class="image" title="forth">
 				<div class="overlay">
 							<div>
