--- a/me/my_pages/me2.html
+++ b/me/my_pages/me2.html
@@ -3,6 +3,7 @@
 <title> Me likeyyy! </title>
 <link rel="icon" href="../my_images/header2.png">
 <link rel="stylesheet" href="../my_styles/me.css">
+<link rel="stylesheet" href="../my_styles/me2.css">
 </head>
 
 <body>
@@ -10,7 +11,7 @@
 <img src="../my_images/banner.jpg">
 </figure>
 
-<div class="holder">
+<div class="holder2">
 <div class="description">
 <p>
 
