unfixed layout for me2.html and added a lot of images

--- a/me/my_pages/me2.html
+++ b/me/my_pages/me2.html
@@ -19,14 +19,14 @@
 </div>
 
 </div>	
-<!-- <figure class="paw">
+<figure class="paw">
 <div class="container">
 	<acronym title="forth">
 		<a href="bruh.html">
-			<img src="my_images/forth1.png" width="100px" height="100px"  class="image" title="forth">
+			<img src="../my_images/forth1.png" width="100px" height="100px"  class="image" title="forth">
 				<div class="overlay">
 							<div>
-								<img src="my_images/forth.png" width="450px" height="120px">
+								<img src="../my_images/forth.png" width="450px" height="120px">
 							</div>
 				</div></a>
 	</acronym>
@@ -34,7 +34,18 @@
 </figure>
 <figure class="home">
 <a href="../index.html">
-<img src="my_images/home.png" width="80px" height="80px" title="back to homepage"></a>
-</figure> -->
+<img src="../my_images/home.png" width="80px" height="80px" title="back to homepage"></a>
+</figure>
+
+<div class="container2">
+		<a href="bruh.html">
+			<img src="../my_images/baby.jpg" width="100px" height="100px"  class="image2" title="forth">
+				<div class="overlay">
+							<div class="text">
+							bruh
+							</div>
+				</div></a>
+</div>
+
 </body>
 </html>
