lots of modifications, fixing the content for me2.html

--- a/me/my_pages/me2.html
+++ b/me/my_pages/me2.html
@@ -2,7 +2,7 @@
 <head>
 <title> Me likeyyy! </title>
 <link rel="icon" href="../my_images/header2.png">
-<link rel="stylesheet" href="../my_styles/me.css">
+<!-- <link rel="stylesheet" href="../my_styles/me.css"> -->
 <link rel="stylesheet" href="../my_styles/me2.css">
 </head>
 
@@ -19,33 +19,27 @@
 </div>
 
 </div>	
-<figure class="paw">
+<figure class="content">
 <div class="container">
-	<acronym title="forth">
-		<a href="bruh.html">
-			<img src="../my_images/forth1.png" width="100px" height="100px"  class="image" title="forth">
-				<div class="overlay">
-							<div>
-								<img src="../my_images/forth.png" width="450px" height="120px">
-							</div>
-				</div></a>
-	</acronym>
-</div>
-</figure>
-<figure class="home">
-<a href="../index.html">
-<img src="../my_images/home.png" width="80px" height="80px" title="back to homepage"></a>
-</figure>
-
-<div class="container2">
-		<a href="bruh.html">
-			<img src="../my_images/baby.jpg" width="100px" height="100px"  class="image2" title="forth">
+			<img src="../my_images/baby.jpg" width="220px" height="220px"  class="image" title="forth">
 				<div class="overlay">
 							<div class="text">
-							bruh
+								DOGGOS!
 							</div>
-				</div></a>
+				</div>
 </div>
-
+<div class="container">
+			<img src="../my_images/coffee.jpg" width="220px" height="220px"  class="image" title="forth">
+				<div class="overlay">
+							<div class="text">
+								COFFEES!
+							</div>
+				</div>
+</div>
+</figure>
+<!-- <figure class="home">
+<a href="../index.html">
+<img src="../my_images/home.png" width="80px" height="80px" title="back to homepage"></a>
+</figure> -->
 </body>
 </html>
