A whole lot of modifications

--- a/me/my_pages/me2.html
+++ b/me/my_pages/me2.html
@@ -21,7 +21,7 @@
 </div>	
 <figure class="content">
 <div class="container">
-			<img src="../my_images/baby.jpg" width="220px" height="220px"  class="image" title="forth">
+			<img src="../my_images/baby.jpg" width="220px" height="220px"  class="image">
 				<div class="overlay">
 							<div class="text">
 								DOGGOS!
@@ -29,10 +29,90 @@
 				</div>
 </div>
 <div class="container">
-			<img src="../my_images/coffee.jpg" width="220px" height="220px"  class="image" title="forth">
+			<img src="../my_images/coffee.jpg" width="220px" height="220px"  class="image">
 				<div class="overlay">
 							<div class="text">
 								COFFEES!
+							</div>
+				</div>
+</div>
+<div class="container">
+			<img src="../my_images/coldplay.jpg" width="220px" height="220px"  class="image">
+				<div class="overlay">
+							<div class="text">
+								COLDPLAY!
+							</div>
+				</div>
+</div>
+<div class="container">
+			<img src="../my_images/art.jpg" width="230px" height="230px"  class="image">
+				<div class="overlay">
+							<div class="text">
+								ART!
+							</div>
+				</div>
+</div>
+<div class="container">
+			<img src="../my_images/musicals.jpg" width="230px" height="230px"  class="image">
+				<div class="overlay">
+							<div class="text">
+								MUSICALS!
+							</div>
+				</div>
+</div>
+<div class="container">
+			<img src="../my_images/cartoon.png" width="230px" height="230px"  class="image">
+				<div class="overlay">
+							<div class="text">
+								CARTOONS!
+							</div>
+				</div>
+</div>
+<div class="container">
+			<img src="../my_images/book.jpg" width="230px" height="230px"  class="image">
+				<div class="overlay">
+							<div class="text">
+								BOOKS!
+							</div>
+				</div>
+</div>
+<div class="container">
+			<img src="../my_images/walk.jpg" width="230px" height="230px"  class="image">
+				<div class="overlay">
+							<div class="text">
+								MORNING WALKS!
+							</div>
+				</div>
+</div>
+<div class="container">
+			<img src="../my_images/disney-logo.jpg" width="230px" height="230px"  class="image">
+				<div class="overlay">
+							<div class="text">
+								DISNEY!
+							</div>
+				</div>
+</div>
+<div class="container">
+			<img src="../my_images/ice_cream.jpg" width="230px" height="230px"  class="image">
+				<div class="overlay">
+							<div class="text">
+								ICE CREAMS!
+							</div>
+				</div>
+</div>
+<div class="container">
+			<img src="../my_images/yum.jpg" width="230px" height="230px"  class="image">
+				<div class="overlay">
+							<div class="text">
+								ADOBONG PUSIT!
+							</div>
+				</div>
+</div>
+<div class="container">
+			<img src="../my_images/night.jpg" width="230px" height="230px"  class="image">
+				<div class="overlay">
+							<div class="text">
+								NIGHT!
 							</div>
 				</div>
 </div>
