--- a/me/my_pages/me2.html
+++ b/me/my_pages/me2.html
@@ -24,7 +24,8 @@
 			<img src="../my_images/baby.jpg" width="220px" height="220px"  class="image">
 				<div class="overlay">
 							<div class="text">
-								DOGGOS!
+								DOGGOS!<br><br>
+								I am obviously obsessed with dogs, if you haven't noticed. They are nothing but total sweethearts! How I only wish I could provide home for every stray dog. They deserve to be loved and be cuddled!
 							</div>
 				</div>
 </div>
@@ -32,7 +33,8 @@
 			<img src="../my_images/coffee.jpg" width="220px" height="220px"  class="image">
 				<div class="overlay">
 							<div class="text">
-								COFFEES!
+								COFFEES!<br><br>
+								Hot or cold, doesn't matter! So long as it's coffee, I am more than happy to drink it! Also, please say yes when I ask you out for a coffee date.
 							</div>
 				</div>
 </div>
@@ -40,7 +42,8 @@
 			<img src="../my_images/coldplay.jpg" width="220px" height="220px"  class="image">
 				<div class="overlay">
 							<div class="text">
-								COLDPLAY!
+								COLDPLAY!<br><br>
+								Fell inlove the first time I heard <i>Viva la Vida</i> way back 2009? -I think and so I fell inlove with the band altogether. Their songs are calming and not to mention their song's lyrics are meaningful, very lovely indeed.
 							</div>
 				</div>
 </div>
@@ -48,7 +51,8 @@
 			<img src="../my_images/art.jpg" width="230px" height="230px"  class="image">
 				<div class="overlay">
 							<div class="text">
-								ART!
+								ART!<br><br>
+								I love art so much! Looking at other people's art inspires me so much! I myself do art too. For me, any form of visual art is an eye candy. Got any art for me to see?? Lemme see! 
 							</div>
 				</div>
 </div>
@@ -56,7 +60,9 @@
 			<img src="../my_images/musicals.jpg" width="230px" height="230px"  class="image">
 				<div class="overlay">
 							<div class="text">
-								MUSICALS!
+								MUSICALS!<br><br>
+								I have recently rekindled my love for musicals! All thanks to Audrey(a classmate), now my playlist is a mess of both musicals and Coldplay (and a dash of other songs here and there)<br>
+								<br><b><i>Do you hear the people sing?</i></b>
 							</div>
 				</div>
 </div>
@@ -64,7 +70,8 @@
 			<img src="../my_images/cartoon.png" width="230px" height="230px"  class="image">
 				<div class="overlay">
 							<div class="text">
-								CARTOONS!
+								CARTOONS!<br><br>
+								Not like most people my age, I am not much of a fan of animes. Look, I am more into cartoons and no, they aren't just for children to enjoy. Aside from the fact that they are fun to watch, I really love watching the animations!
 							</div>
 				</div>
 </div>
@@ -72,7 +79,8 @@
 			<img src="../my_images/book.jpg" width="230px" height="230px"  class="image">
 				<div class="overlay">
 							<div class="text">
-								BOOKS!
+								BOOKS!<br><br>
+								Books are great! Authors are greater! I salute every author out there. Like yes! Go and share your great stories to the world! Dan Brown's books are a personal favorite. Read his books and you'll know why.
 							</div>
 				</div>
 </div>
@@ -80,7 +88,8 @@
 			<img src="../my_images/walk.jpg" width="230px" height="230px"  class="image">
 				<div class="overlay">
 							<div class="text">
-								MORNING WALKS!
+								MORNING WALKS!<br><br>
+								I will never not love walking early in the morning with my buddy Reyna(classmate again). I enjoy them so much because they are calming. Helps me think and I am at ease. Also because sunrises!!
 							</div>
 				</div>
 </div>
@@ -88,7 +97,8 @@
 			<img src="../my_images/disney-logo.jpg" width="230px" height="230px"  class="image">
 				<div class="overlay">
 							<div class="text">
-								DISNEY!
+								DISNEY!<br><br>
+								I've grown up loving Disney so much! From its movies, series, to their songs! And of course, their animation too! Soon my love, I will get there.
 							</div>
 				</div>
 </div>
@@ -96,7 +106,8 @@
 			<img src="../my_images/ice_cream.jpg" width="230px" height="230px"  class="image">
 				<div class="overlay">
 							<div class="text">
-								ICE CREAMS!
+								ICE CREAMS!<br><br>
+								Ah yes, if you want to see a person jumping all excited, squealing hysterically then you'll only have to give me coffee flavored ice cream (1.5L please). 
 							</div>
 				</div>
 </div>
@@ -104,7 +115,8 @@
 			<img src="../my_images/yum.jpg" width="230px" height="230px"  class="image">
 				<div class="overlay">
 							<div class="text">
-								ADOBONG PUSIT!
+								ADOBONG PUSIT!<br><br>
+								Step aside! Mama's adobong pusit recipe will and always will be at the top of my taste buds! No one has beaten them by far. Squids are incredibly delicious! I WANT TO KNOW WHY??
 							</div>
 				</div>
 </div>
@@ -112,7 +124,8 @@
 			<img src="../my_images/night.jpg" width="230px" height="230px"  class="image">
 				<div class="overlay">
 							<div class="text">
-								NIGHT!
+								NIGHT!<br><br>
+								I mean, c'mon? The sight of twinkling stars? the luminous moon (if there is)? The cool breeze? Who wouldn't love that?
 							</div>
 				</div>
 </div>
