--- a/me/me.html
+++ b/me/me.html
@@ -16,7 +16,7 @@
 Hewoooo! So you probably know me by Andrea, but I go by Nicole most of the time. Believe me it has a reason but I'm not going to tell that now. Not Here. Though you can call me whatever you like as long as it's part of my name, of course! So yeah, nice to meet you (I guess)!
 </p>
 <p class="sub">
-<br><br><br>Also, I do not in any way own the pictures here on my website they're stolen from the internet unless I said otherwise. These (pug)pictures are rightly owned by pugliepug.com, so please don't sue me. Thank you.
+<br><br>Also, I do not in any way own the pictures here on my website they're stolen from the internet unless I said otherwise. These (pug)pictures are rightly owned by pugliepug.com, so please don't sue me. Thank you.
 </p>
 </div>
 </div>	
@@ -24,10 +24,10 @@ Hewoooo! So you probably know me by Andrea, but I go by Nicole most of the time.
 <div class="container">
 	<acronym title="forth">
 		<a href="my_pages/me2.html">
-			<img src="my_images/forth1.png" width="100px" height="100px"  class="image" title="forth">
+			<img src="my_images/forth1.png" width="50px" height="50px"  class="image" title="forth">
 				<div class="overlay">
 							<div>
-								<img src="my_images/forth.png" width="450px" height="120px">
+								<img src="my_images/forth.png" width="200px" height="60px">
 							</div>
 				</div></a>
 	</acronym>
