--- a/me/my_pages/me2.html
+++ b/me/my_pages/me2.html
@@ -130,9 +130,9 @@
 				</div>
 </div>
 </figure>
-<!-- <figure class="home">
-<a href="../index.html">
+<figure class="home">
+<a href="../../index.html">
 <img src="../my_images/home.png" width="80px" height="80px" title="back to homepage"></a>
-</figure> -->
+</figure>
 </body>
 </html>
