added images and modifications

--- a/me/my_pages/me2.html
+++ b/me/my_pages/me2.html
@@ -9,13 +9,16 @@
 <body>
 <figure>
 <img src="../my_images/banner.jpg">
+<img src="../my_images/likes.jpg">
 </figure>
 
 <div class="holder2">
-<div class="description">
-<p>
-
-</p>
+<figure class="forth"><a href="">
+<img src="../my_images/arrow.png" width="60px" height="60px" title="forth"></a>
+</figure>
+<figure class="back"><a href="../me.html">
+<img src="../my_images/arrow2.png" width="60px" height="60px" title="back"></a>
+</figure>
 </div>
 
 </div>	
@@ -52,7 +55,7 @@
 				<div class="overlay">
 							<div class="text">
 								ART!<br><br>
-								I love art so much! Looking at other people's art inspires me so much! I myself do art too. For me, any form of visual art is an eye candy. Got any art for me to see?? Lemme see! 
+								I love art! Looking at other people's art inspires me so much! I myself do art too. For me, any form of visual art is an eye candy. Got any art for me to see?? Lemme see! 
 							</div>
 				</div>
 </div>
@@ -134,5 +137,6 @@
 <a href="../../index.html">
 <img src="../my_images/home.png" width="80px" height="80px" title="back to homepage"></a>
 </figure>
+
 </body>
 </html>
