added new page: me3.html and new image

--- a/me/my_pages/me2.html
+++ b/me/my_pages/me2.html
@@ -46,7 +46,7 @@
 				<div class="overlay">
 							<div class="text">
 								COLDPLAY!<br><br>
-								Fell inlove the first time I heard <i>Viva la Vida</i> way back 2009? -I think and so I fell inlove with the band altogether. Their songs are calming and not to mention their song's lyrics are meaningful, very lovely indeed.
+								Fell inlove the first time I heard <i>Viva la Vida</i> way back 2009? -I think, and so I fell inlove with the band altogether. Their songs are calming and not to mention their song's lyrics are meaningful, very lovely indeed.
 							</div>
 				</div>
 </div>
