modifications on me2.css and me2.html

--- a/me/my_pages/me2.html
+++ b/me/my_pages/me2.html
@@ -13,15 +13,10 @@
 </figure>
 
 <div class="holder2">
-<figure class="forth"><a href="">
-<img src="../my_images/arrow.png" width="60px" height="60px" title="forth"></a>
-</figure>
-<figure class="back"><a href="../me.html">
-<img src="../my_images/arrow2.png" width="60px" height="60px" title="back"></a>
-</figure>
-</div>
 
-</div>	
+
+
+	
 <figure class="content">
 <div class="container">
 			<img src="../my_images/baby.jpg" width="220px" height="220px"  class="image">
@@ -133,6 +128,14 @@
 				</div>
 </div>
 </figure>
+<figure class="forth"><a href="../my_pages/me3.html">
+<img src="../my_images/arrow.png" width="60px" height="60px" title="forth"></a>
+</figure>
+<figure class="back"><a href="../me.html">
+<img src="../my_images/arrow2.png" width="60px" height="60px" title="back"></a>
+</figure>
+</div>
+
 <figure class="home">
 <a href="../../index.html">
 <img src="../my_images/home.png" width="80px" height="80px" title="back to homepage"></a>
