--- a/me/my_pages/me3.html
+++ b/me/my_pages/me3.html
@@ -1,13 +1,14 @@
 <html>
 <head>
 <title> Hello! </title>
-<link rel="stylesheet" href="my_styles/me.css">
-<link rel="icon" href="my_images/header2.png">
+<link rel="stylesheet" href="../my_styles/me.css">
+<link rel="icon" href="../my_images/header2.png">
 </head>
 
 <body>
 <figure>
-<img src="my_images/banner.jpg">
+<img src="../my_images/banner.jpg">
+<img src="../my_images/hobs.jpg">
 </figure>
 
 <div class="holder">
@@ -19,9 +20,9 @@
 
 </div>
 </div>	
-<figure class="home">
-<a href="../index.html">
+<!-- <figure class="home">
+<a href="../../index.html">
 <img src="my_images/home.png" width="80px" height="80px" title="back to homepage"></a>
-</figure>
+</figure> -->
 </body>
 </html>
