lots of modifications and added image

--- a/me/my_pages/me2.html
+++ b/me/my_pages/me2.html
@@ -8,8 +8,9 @@
 
 <body>
 <figure>
-<img src="../my_images/banner.jpg">
 <img src="../my_images/likes.jpg">
+<img src="../my_images/banner2.jpg">
+
 </figure>
 
 <div class="holder2">
