--- a/me/my_pages/me3.html
+++ b/me/my_pages/me3.html
@@ -1,28 +1,31 @@
 <html>
 <head>
-<title> Hello! </title>
-<link rel="stylesheet" href="../my_styles/me.css">
+<title> I do </title>
+<link rel="stylesheet" href="../my_styles/me3.css">
 <link rel="icon" href="../my_images/header2.png">
 </head>
 
 <body>
 <figure>
-<img src="../my_images/banner.jpg">
 <img src="../my_images/hobs.jpg">
+<img src="../my_images/banner2.jpg">
+
 </figure>
 
-<div class="holder">
+<div class="holder3">
 <div class="description">
 <p>
-
+Eyyy, this is the end of the line of knowing the person that I am! As you knew, I pretty much like art and doing art. I draw often than not -except maybe when I
 </p>
 
 
 </div>
 </div>	
-<!-- <figure class="home">
+<figure class="home">
 <a href="../../index.html">
-<img src="my_images/home.png" width="80px" height="80px" title="back to homepage"></a>
-</figure> -->
+<img src="../my_images/home.png" width="80px" height="80px" title="back to homepage"></a>
+</figure>
+<div class="holder4">
+</div>
 </body>
 </html>
