added content for me3.html

--- a/me/my_pages/me3.html
+++ b/me/my_pages/me3.html
@@ -15,7 +15,9 @@
 <div class="holder3">
 <div class="description">
 <p>
-Eyyy, this is the end of the line of knowing the person that I am! As you knew, I pretty much like art and doing art. I draw often than not -except maybe when I
+Eyyy, this is the end of the line of knowing the person that I am! As you knew, I pretty much like art and doing art. I draw often than not -except maybe when I am on an artblock. The pencil is my best friend! I could go alone as long as I have my sketchbook and pencil by me.<br>
+I also love painting especially with poster paints. However, I am still learning how to manipulate watercolors. But to be honest, I'm not good with colors, I'm still trying to improve on that part. It's very ironic though, how much I love looking at visual arts in any medium yet I despise using charcoal pencils and pastels. I am not a big fan of them. <br> <br>
+To become an animator or become part of an animation team is my dream!
 </p>
 
 
