final changes and additions

--- a/me/my_pages/me3.html
+++ b/me/my_pages/me3.html
@@ -19,7 +19,9 @@ Eyyy, this is the end of the line of knowing the person that I am! As you knew, 
 I also love painting especially with poster paints. However, I am still learning how to manipulate watercolors. But to be honest, I'm not good with colors, I'm still trying to improve on that part. It's very ironic though, how much I love looking at visual arts in any medium yet I despise using charcoal pencils and pastels. I am not a big fan of them. <br> <br>
 To become an animator or become part of an animation team is my dream!
 </p>
-
+<figure class="back"><a href="../my_pages/me2.html">
+<img src="../my_images/arrow2.png" width="60px" height="60px" title="back"></a>
+</figure>
 
 </div>
 </div>	
@@ -27,7 +29,21 @@ To become an animator or become part of an animation team is my dream!
 <a href="../../index.html">
 <img src="../my_images/home.png" width="80px" height="80px" title="back to homepage"></a>
 </figure>
+
 <div class="holder4">
+<!-- <figure class="gallery">
+<img src="../my_images/gallery.jpg">
+
+</figure> -->
+<p class="title">Some of my arts! (I'm saving space, sorry)<p>
+<figure class="gallery">
+<a target="_blank" href="../my_images/gallery1.gif"><img src="../my_images/gallery1.gif" width="220px" height="220px"></a>
+<a target="_blank" href="../my_images/gallery2.jpg"><img src="../my_images/gallery2.jpg" width="220px" height="220px"></a>
+<a target="_blank" href="../my_images/gallery3.jpg"><img src="../my_images/gallery3.jpg" width="220px" height="220px"></a>
+<a target="_blank" href="../my_images/gallery4.jpg"><img src="../my_images/gallery4.jpg" width="220px" height="220px"></a>
+<a target="_blank" href="../my_images/gallery5.jpg"><img src="../my_images/gallery5.jpg" width="220px" height="220px"></a>
+<a target="_blank" href="../my_images/gallery6.jpg"><img src="../my_images/gallery6.jpg" width="220px" height="220px"></a>
+</figure>
 </div>
 </body>
 </html>
